# pl_temp_fit

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  _test_pyproject.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  slurm-9812924.out  streamlit_app.py
.devcontainer/: devcontainer.json
HPC_bash_script/: Run_EMCEE_GSISO-300K_G0_600.0nm_1250.0nm_07-07-2024-16h-58m_Exposure_1.0s_mod_split0_split500.sh  Run_EMCEE_IEICO4F_cb-300K_G0_820.0nm_1600.0nm_17-07-2024-13h-01m_Exposure_5.0s.sh  Run_EMCEE_IEICO_cb-300K_G0_750.0nm_1600.0nm_16-07-2024-12h-41m_Exposure_5.0s.sh  Run_EMCEE_IEICOcn-2_cb-300K_G0_750.0nm_1600.0nm_16-07-2024-12h-45m_Exposure_5.0s.sh  Run_EMCEE_IT4F-300K-9_G0_650.0nm_1450.0nm_12-07-2024-12h-55m_Exposure_2.0s_mod_split0_split500.sh  Run_EMCEE_IT4F-soln_mod_split0_split500.sh  Run_EMCEE_IT4FDIO-300K-9_G0_650.0nm_1450.0nm_12-07-2024-12h-45m_Exposure_2.0s_mod_split0_split500.sh  Run_EMCEE_ITIC-300K-2_G0_650.0nm_1450.0nm_12-07-2024-10h-44m_Exposure_3.0s_mod_split0_split500.sh  Run_EMCEE_ITIC-soln_mod_split0_split500.sh  Run_EMCEE_ITICDIO-300K-9_G0_650.0nm_1450.0nm_12-07-2024-12h-49m_Exposure_2.0s_mod_split0_split500.sh  Run_EMCEE_L8BO-fresh-300K_G0_750.0nm_1350.0nm_15-06-2024-16h-39m_Exposure_2.0s_mod_split0_split500.sh  Run_EMCEE_L8BO-soln.sh  Run_EMCEE_PYIT-300K_G0_650.0nm_1500.0nm_07-07-2024-16h-25m_Exposure_5.0s_mod_split0_split500.sh  Run_EMCEE_S3-Y6DIB-brilliantmat-sameday_mod_split0_split500_mod_split0_split500.sh  Run_EMCEE_Y5-300K-sync2_G0_750.0nm_1400.0nm_15-10-2024-15h-34m_Exposure_2.0s_mod_split0_split500.sh  Run_EMCEE_Y5-soln_mod_split0_split500.sh  Run_EMCEE_Y5DIO-300K-sync2_G0_750.0nm_1400.0nm_15-10-2024-15h-46m_Exposure_2.0s_mod_split0_split500.sh  Run_EMCEE_Y6-brilliantmat-DIO-fresh-300K_G0_mod_split0_split500_mod_split0_split500.sh  Run_EMCEE_Y6-brilliantmat-sameday-fresh-300K_G0_mod_split0_split500_mod_split0_split500.sh  Run_EMCEE_Y6-soln.sh  Run_EMCEE_Y6-soln_mod_split0_split500.sh  Run_EMCEE_Y6-unanneal-sync2_G0_750.0nm_1450.0nm_25-09-2024-14h-40m_Exposure_3.0s_mod_split0_split500.sh  Run_EMCEE_Y6DIB-1mat-300K_G0_700.0nm_1500.0nm_21-06-2024-17h-49m_Exposure_3.0s_mod_split0_split500.sh
docs/: conf.py  index.rst
example/: QUICKSTART.md  README.md  STREAMLIT_APP_GUIDE.md  example_PL_data_Y6.csv  example_PL_data_Y6_mod.csv  example_PL_data_Y6_mod_mod.csv  example_PL_data_Y6_mod_split0_split500.csv  example_workflow.py  streamlit_app.py
notebook/: 00_prepare_experimental_data_ELPL.ipynb  0_prepare_experimental_data_PL.ipynb  11_run_sampling_ELPL.ipynb  1_run_sampling_PL.ipynb  22_analyse_sampling_output_PLEL.ipynb  2_analyse_sampling_output_PL.ipynb  3_run_hyperparamete_sensitivity_analysis.ipynb  Fit_EL_new_workflow.ipynb  Fit_PL_new_workflow.ipynb  Fit_workflow.ipynb  (+18 more)
(+301 files in other folders)
